added some more stuff
