# docs/swagger.json
@@ -8,34 +8,15 @@
             "post": {
                 "description": "Create a new task",
                 "summary": "Create a new task",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "parameters": [
+                    {
+                        "description": "Task",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
                         "schema": {
                             "$ref": "#/definitions/model.TaskDTO"
                         }
-                    }
-                }
-            }
-        },
-        "/schedule/task/{date}/{groupid}": {
-            "get": {
-                "description": "Get a list of tasks by date and group",
-                "summary": "Get the tasks by date and group",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Date",
-                        "name": "date",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Group ID",
-                        "name": "groupid",
-                        "in": "path",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -80,6 +61,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Task",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.TaskDTO"
+                        }
                     }
                 ],
                 "responses": {
@@ -156,6 +146,36 @@
                     }
                 }
             }
+        },
+        "/schedule/{date}/{groupid}": {
+            "get": {
+                "description": "Get a list of tasks by date and group",
+                "summary": "Get the tasks by date and group",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Date",
+                        "name": "date",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Group ID",
+                        "name": "groupid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.TaskDTO"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -163,7 +183,7 @@
             "type": "object",
             "properties": {
                 "checkedIn": {
-                    "type": "string"
+                    "type": "boolean"
                 },
                 "checkinId": {
                     "type": "integer"
